--- a/src/app/admin/articulos/articulos.component.scss
+++ b/src/app/admin/articulos/articulos.component.scss
@@ -49,6 +49,7 @@ tr.example-element-row:not(.example-expanded-row):active {
 .bottom-buttons {
   width: 100%;
   height: 50px;
+  margin-left: -10px;
 }
 
 /* .example-element-description-attribution {
