--- a/src/app/buscar/buscar.component.html
+++ b/src/app/buscar/buscar.component.html
@@ -1,182 +1,1 @@
-<div style="width: 100%;min-height: calc(100vh - var(--footer-div-height) - var(--toolbar-div-height));" fxLayoutAlign="center">
-  <div fxFlex="1300px" fxLayout="row" fxLayoutGap="24px">
-    <app-categories></app-categories>
-    <div fxFlex="1 1 auto">
-      <app-filtrar (filtrarPor)="onFiltrarPor($event)"></app-filtrar>
-      <mat-grid-list cols="4" rowHeight="500px" gutterSize="20px">
-        <mat-grid-tile *ngFor="let articulo of articulos">
-          <div style="width: 100%;">
-            <mat-grid-list cols="1" rowHeight="1:1" gutterSize="0px">
-              <mat-grid-tile rowspan="1">
-                <img
-                [src]="urlImagenes + articulo.imagen"
-                alt=""
-                width="auto"
-                height="100%"
-              />
-              </mat-grid-tile>
-            </mat-grid-list>
-            <mat-grid-list cols="1" rowHeight="5:3" gutterSize="0px">
-              <mat-grid-tile>
-                <p style="text-align: center;">
-                  {{ articulo.articulo}}
-                </p>
-              </mat-grid-tile>
-            </mat-grid-list>
-            <mat-grid-list cols="1" rowHeight="53px" gutterSize="0px">
-              <mat-grid-tile style="background-color: pink;">${{ articulo.precio }}</mat-grid-tile>
-            </mat-grid-list>
-          </div>
-        </mat-grid-tile>
-       <!--  <mat-grid-tile>
-          <div style="width: 100%;">
-            <mat-grid-list cols="1" rowHeight="1:1" gutterSize="0px">
-              <mat-grid-tile rowspan="1">
-                <img
-                src="https://mx.celulares.com/fotos/huawei-p40-lite-86112-g-alt.jpg"
-                alt=""
-                height="100%"
-              />
-              </mat-grid-tile>
-            </mat-grid-list>
-            <mat-grid-list cols="1" rowHeight="5:3" gutterSize="0px">
-              <mat-grid-tile>
-                <p style="text-align: center;">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam ipsam corrupti
-                </p>
-              </mat-grid-tile>
-            </mat-grid-list>
-            <mat-grid-list cols="1" rowHeight="53px" gutterSize="0px">
-              <mat-grid-tile style="background-color: pink;">583.22 pesos</mat-grid-tile>
-            </mat-grid-list>
-          </div>
-        </mat-grid-tile>
-        <mat-grid-tile>
-          <div style="width: 100%;">
-            <mat-grid-list cols="1" rowHeight="1:1" gutterSize="0px">
-              <mat-grid-tile rowspan="1">
-                <img
-                src="https://resources.claroshop.com/medios-plazavip/mkt/5ca3e10cc1dd9_p30lite-azul-front-800x800-72-dpijpg.jpg"
-                alt=""
-                width="100%"
-                height="auto"
-              />
-              </mat-grid-tile>
-            </mat-grid-list>
-            <mat-grid-list cols="1" rowHeight="5:3" gutterSize="0px">
-              <mat-grid-tile>
-                <p style="text-align: center;">
-                  Lorem ipsum dolor
-                </p>
-              </mat-grid-tile>
-            </mat-grid-list>
-            <mat-grid-list cols="1" rowHeight="53px" gutterSize="0px">
-              <mat-grid-tile style="background-color: pink;">583.22 pesos</mat-grid-tile>
-            </mat-grid-list>
-          </div>
-        </mat-grid-tile>
-        <mat-grid-tile>
-          <div style="width: 100%;">
-            <mat-grid-list cols="1" rowHeight="1:1" gutterSize="0px">
-              <mat-grid-tile rowspan="1">
-                <img
-                src="https://resources.claroshop.com/medios-plazavip/mkt/5ca3e10cc1dd9_p30lite-azul-front-800x800-72-dpijpg.jpg"
-                alt=""
-                width="100%"
-                height="auto"
-              />
-              </mat-grid-tile>
-            </mat-grid-list>
-            <mat-grid-list cols="1" rowHeight="5:3" gutterSize="0px">
-              <mat-grid-tile>
-                <p style="text-align: center;">
-                  Lorem ipsum dolor
-                </p>
-              </mat-grid-tile>
-            </mat-grid-list>
-            <mat-grid-list cols="1" rowHeight="53px" gutterSize="0px">
-              <mat-grid-tile style="background-color: pink;">583.22 pesos</mat-grid-tile>
-            </mat-grid-list>
-          </div>
-        </mat-grid-tile>
-        <mat-grid-tile>
-          <div style="width: 100%;">
-            <mat-grid-list cols="1" rowHeight="1:1" gutterSize="0px">
-              <mat-grid-tile rowspan="1">
-                <img
-                src="https://resources.claroshop.com/medios-plazavip/mkt/5ca3e10cc1dd9_p30lite-azul-front-800x800-72-dpijpg.jpg"
-                alt=""
-                width="100%"
-                height="auto"
-              />
-              </mat-grid-tile>
-            </mat-grid-list>
-            <mat-grid-list cols="1" rowHeight="5:3" gutterSize="0px">
-              <mat-grid-tile>
-                <p style="text-align: center;">
-                  Lorem ipsum dolor
-                </p>
-              </mat-grid-tile>
-            </mat-grid-list>
-            <mat-grid-list cols="1" rowHeight="53px" gutterSize="0px">
-              <mat-grid-tile style="background-color: pink;">583.22 pesos</mat-grid-tile>
-            </mat-grid-list>
-          </div>
-        </mat-grid-tile>
-        <mat-grid-tile>
-          <div style="width: 100%;">
-            <mat-grid-list cols="1" rowHeight="1:1" gutterSize="0px">
-              <mat-grid-tile rowspan="1">
-                <img
-                src="https://cdn.shopify.com/s/files/1/1040/3796/products/funda-para-celular-plants-funda-personalizada-iphone-accesorios-para-celulares_grande.jpg?v=1582322063"
-                alt=""
-                height="100%"
-              />
-              </mat-grid-tile>
-            </mat-grid-list>
-            <mat-grid-list cols="1" rowHeight="5:3" gutterSize="0px">
-              <mat-grid-tile>
-                <p style="text-align: center;">
-                  Lorem ipsum dolor
-                </p>
-              </mat-grid-tile>
-            </mat-grid-list>
-            <mat-grid-list cols="1" rowHeight="53px" gutterSize="0px">
-              <mat-grid-tile style="background-color: pink;">583.22 pesos</mat-grid-tile>
-            </mat-grid-list>
-          </div>
-        </mat-grid-tile>
-        <mat-grid-tile>
-          <div style="width: 100%;">
-            <mat-grid-list cols="1" rowHeight="1:1" gutterSize="0px">
-              <mat-grid-tile rowspan="1">
-                <img
-                src="https://mobomx.vteximg.com.br/arquivos/ids/167673-600-600/telefono-celular-huawei-nova-5t-8-128-azul-portada-01.jpg?v=637158383165570000"
-                alt=""
-                width="100%"
-                height="auto"
-              />
-              </mat-grid-tile>
-            </mat-grid-list>
-            <mat-grid-list cols="1" rowHeight="5:3" gutterSize="0px">
-              <mat-grid-tile>
-                <p style="text-align: center;">
-                  Lorem ipsum dolor
-                </p>
-              </mat-grid-tile>
-            </mat-grid-list>
-            <mat-grid-list cols="1" rowHeight="53px" gutterSize="0px">
-              <mat-grid-tile style="background-color: pink;">583.22 pesos</mat-grid-tile>
-            </mat-grid-list>
-          </div>
-        </mat-grid-tile> -->
-      </mat-grid-list>
-<!--       <div style="height: 100px;" fxLayoutAlign="end center">
-        <mat-paginator [length]="100"
-        [pageSize]="10"
-        [pageSizeOptions]="[5, 10, 25, 100]">
-</mat-paginator>
-      </div> -->
-    </div>
-  </div>
-</div>
+<p>buscar works!!</p>
