--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,10 +24,8 @@
     >
     </carousel> -->
     <div fxFlex="100%" style="margin-top: 20px">
-      <div id="pointer" fxFlex="250px" fxLayoutAlign="center center">
-        <span style="font-weight: 500; font-size: 1.2rem; color: whitesmoke"
-          >DESTACADOS</span
-        >
+      <div class="etiqueta" fxFlex="240px" fxLayoutAlign="center center">
+        <span style="font-weight: 500; font-size: 1.2rem">DESTACADOS</span>
       </div>
     </div>
     <app-carousel
@@ -38,10 +36,10 @@
       [cellsToShow]="3"
       [loop]="true"
       [autoplay]="true"
-      [transitionDuration]="1500"
+      [transitionDuration]="1000"
       [autoplayInterval]="7000"
       [margin]="20"
-      [transitionTimingFunction]="'ease-in-out'"
+      [transitionTimingFunction]="'ease'"
       [arrows]="true"
       [cellsToScroll]="3"
       [overflowCellsLimit]="3"
@@ -62,27 +60,46 @@
         loading="lazy"
       />
     </div> -->
-    <div fxFlex="100%" style="margin-top: 60px">
-      <div id="pointer" fxFlex="250px" fxLayoutAlign="center center">
-        <span style="font-weight: 500; font-size: 1.2rem; color: whitesmoke"
-          >NUEVO</span
-        >
+    <div fxFlex="100%" style="margin-top: 100px">
+      <div class="etiqueta" fxFlex="250px" fxLayoutAlign="center center">
+        <span style="font-weight: 500; font-size: 1.2rem">NUEVO</span>
       </div>
     </div>
 
-    <app-mostrar-articulos [articulos]="imagenes" style="width: 100%;"></app-mostrar-articulos>
+    <app-mostrar-articulos
+      [articulos]="imagenes"
+      style="width: 100%"
+    ></app-mostrar-articulos>
 
-
-    <div fxFlex="100%" style="margin-top: 60px">
-      <div id="pointer" fxFlex="250px" fxLayoutAlign="center center">
-        <span style="font-weight: 500; font-size: 1.2rem; color: whitesmoke"
-          >OFERTAS</span
-        >
+    <div fxFlex="100%" style="margin-top: 100px">
+      <div class="etiqueta" fxFlex="250px" fxLayoutAlign="center center">
+        <span style="font-weight: 500; font-size: 1.2rem">OFERTAS</span>
       </div>
     </div>
-    <app-mostrar-articulos [articulos]="imagenes" style="width: 100%;"></app-mostrar-articulos>
+    <app-mostrar-articulos
+      [articulos]="imagenes"
+      style="width: 100%"
+    ></app-mostrar-articulos>
 
+    <div fxFlex="100%" style="margin-top: 100px">
+      <div class="etiqueta" fxFlex="250px" fxLayoutAlign="center center">
+        <span style="font-weight: 500; font-size: 1.2rem">CATEGORÍAS</span>
+      </div>
+    </div>
+    <mat-grid-list
+      style="margin: 20px 0px 40px 0px;"
+      fxFlex="100%"
+      cols="4"
+      gutterSize="40px"
+      rowHeight="2:1"
+    >
+      <mat-grid-tile
+        style="background-color: #00BCD4;border-radius: 10px; cursor: pointer"
+        *ngFor="let categoria of categorias"
+        (click)="onCategoriaClicked(categoria.id_categoria)"
+      >
+        <span style="margin: 20px;font-weight: 500;font-size: 1.2rem;text-align: center;">{{ categoria.categoria }}</span>
+      </mat-grid-tile>
+    </mat-grid-list>
   </div>
-
-  <!-- <button (click)="acCell()" type="button">cambiar</button> -->
 </div>
