--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,10 +13,10 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $catalogo-primary: mat-palette($mat-indigo);
-$catalogo-accent: mat-palette($mat-pink, A200, A100, A400);
+$catalogo-accent: mat-palette($mat-blue, 700);
 
 // The warn palette is optional (defaults to red).
-$catalogo-warn: mat-palette($mat-red);
+$catalogo-warn: mat-palette($mat-red, 700);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
