--- a/src/app/components/filtrar/filtrar.component.html
+++ b/src/app/components/filtrar/filtrar.component.html
@@ -1,5 +1,5 @@
 
-<div style="width: 100%;height: 54px;margin-bottom: 24px;background-color: whitesmoke;" fxLayout="row" fxLayoutAlign="end center">
+<div style="width: 100%;height: 54px;margin: 24px 0px 24px 0px;background-color: #ffc107; border-radius: 3px;" fxLayout="row" fxLayoutAlign="end center">
   <button mat-stroked-button style="margin-right: 24px;" [matMenuTriggerFor]="menu">Ordenar por: <span class="mat-small">{{filtro}}</span></button>
 
 </div>
